HTML: fixed issue with logo and header-text. Projects: flexwrap everything inside and use flex-basis in css to have 1 big image and 4 smaller ones.

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,8 +20,8 @@ body {
 /* Background image */
 #header {
   width: 100%;
-  height: 100vh;
-  background-image: url(/assets/images/circuits.webp);
+  height: 50vh;
+  background-image: url("./images/circuits.webp");
   background-size: cover;
   background-position: center;
 }
@@ -30,15 +30,19 @@ body {
 .top-nav {
   display: flex;
   /* align-items: center; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
   flex-wrap: wrap;
-  background: #9bb5d6;
   /* border: gold solid; */
 }
 
-/* Size of logo */
 .logo {
-  width: 140px;
+  background: #9bb5d6;
+  display: flex;
+  align-items: center;
+}
+/* Size of logo */
+.rooster {
+  width: 100px;
 }
 
 /* Title appearance */
@@ -55,6 +59,11 @@ body {
   font-size: 20px;
 }
 
+.nav-links {
+  margin-left: auto;
+  margin-top: 5%;
+}
+
 /* Area around the links */
 .top-nav ul li {
   display: inline-block;
@@ -68,6 +77,7 @@ body {
 .top-nav a {
   color: #0e2954;
   font-size: 20px;
+
   text-align: left;
   text-decoration: none;
   text-transform: uppercase;
@@ -92,6 +102,49 @@ nav ul li a:hover::after {
 }
 /* End of navigation bar */
 
+.about-me {
+  display: flex;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 75%;
+}
+
+.flex-item {
+  display: flex;
+  height: 150px;
+  flex-basis: 45%;
+
+  border: 5px solid red;
+}
+
+#port1 {
+  flex-basis: 100%;
+}
+/* Parameters of h2 */
+.about-me h2,
+.projects h2,
+.contacts h2 {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 150px;
+  width: auto;
+  font-family: "Courier New", Courier, monospace;
+}
+
+/* Organize the Contacts Section*/
+.contact ul li a {
+  display: inline-block;
+  max-height: 200px;
+}
+
 /* Footer */
 /* Appearance of footer */
 .footer {
@@ -102,7 +155,7 @@ nav ul li a:hover::after {
   text-align: center;
 }
 
-.footer h2 {
+.footer h3 {
   font-size: 20px;
 }
 /* End of footer */
